--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
-    "openai": "^5.0.0"
+    "@upstash/redis": "^1.34.9",
+    "dotenv": "^16.0.3",
+    "openai": "^4.5.0",
+    "twitter-api-v2": "^1.16.0"
   }
 }
